--- a/history.html
+++ b/history.html
@@ -35,7 +35,7 @@
 			<div class="centrize full-width">
 				<div class="vertical-center">
 					<div class="spinner-logo">
-						<img src="images/logo.png" alt="" />
+						<img src="images/jestlogo.png" alt="" />
 						<div class="spinner-dot">
 							<div class="spinner-line"></div>
 						</div>
@@ -89,7 +89,7 @@
 
 						<!-- logo -->
 						<div class="kf-logo">
-							<a href="index.html"><img src="images/logo.png" alt="" /></a>
+							<a href="index.html"><img src="images/jestlogo.png" alt="" /></a>
 						</div>
 
 					</div>
@@ -590,7 +590,7 @@
 
 						<!-- logo -->
 						<div class="kf-logo element-anim-1 scroll-animate" data-animate="active">
-							<a href="index.html"><img src="images/logo.png" alt="" /></a>
+							<a href="index.html"><img src="images/jestlogo.png" alt="" /></a>
 						</div>
 
 					</div>
