--- a/index-2.html
+++ b/index-2.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>Quốc Lâm - Cafe & Restaurant5 Sao</title>
+	<title>NPT - Restaurant Cafe</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,7 +50,7 @@
 			<!-- topline -->
 			<div class="kf-topline">
 				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+					<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 btn">
 
 						<!-- hours -->
 						<div class="kf-h-group">
