--- a/history.html
+++ b/history.html
@@ -297,7 +297,7 @@
 
 					<div class="kf-titles align-center">
 						<div class="kf-subtitle element-anim-1 scroll-animate" data-animate="active">
-							Our Quốc Lâm History
+							Our NPT History
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
 							Something Know About Our History
@@ -314,7 +314,7 @@
 											<img src="images/history1.jpg" alt="" />
 										</div>
 										<div class="desc">
-											<div class="subname">Quốc Lâm restaurant was founded</div>
+											<div class="subname">NPT restaurant was founded</div>
 											<h5 class="name">
 												Three Front-End Auditing Tools I Discovered Recently Useful Front-End
 												Boilerplates
@@ -629,7 +629,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -680,7 +680,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
