--- a/index-2.html
+++ b/index-2.html
@@ -262,7 +262,7 @@
 								<div class="container">
 									<div class="description align-left element-anim-1">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
 											Reserve Your <br>Table Today
@@ -290,7 +290,7 @@
 								<div class="container">
 									<div class="description align-left element-anim-1">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
 											Explore The <br>Lobsters
@@ -318,10 +318,10 @@
 								<div class="container">
 									<div class="description align-left element-anim-1">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
-											Premium <br>Meat Quốc Lâm
+											Premium <br>Meat NPT
 										</h2>
 										<div class="kf-bts">
 											<a href="menu-restaurant.html" class="kf-btn">
@@ -431,7 +431,7 @@
 							Choose Best Menus
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Popular Foods Menu
+							NPT Popular Foods Menu
 						</h3>
 					</div>
 
@@ -764,7 +764,7 @@
 
 							<div class="kf-titles">
 								<div class="kf-subtitle element-anim-1 scroll-animate" data-animate="active">
-									About Quốc Lâm
+									About NPT
 								</div>
 								<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
 									Have Nice & Enjoyable <br>Time With Our Foods
@@ -1457,7 +1457,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -1508,7 +1508,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
