--- a/menu-restaurant.html
+++ b/menu-restaurant.html
@@ -272,7 +272,7 @@
 							Choose Best of
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Lunch Menu
+							NPT Lunch Menu
 						</h3>
 					</div>
 
@@ -428,7 +428,7 @@
 							Choose Best of
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Dinner Menu
+							NPT Dinner Menu
 						</h3>
 					</div>
 
@@ -747,7 +747,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -798,7 +798,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
