--- a/reservation.html
+++ b/reservation.html
@@ -601,7 +601,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -652,7 +652,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
