--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@
 
 							<div class="kf-titles">
 								<div class="kf-subtitle element-anim-1 scroll-animate" data-animate="active">
-									About Quốc Lâm
+									About NPT
 								</div>
 								<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
 									New London Coffee Founded For Extraordinary Test
@@ -876,7 +876,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -927,7 +927,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
