--- a/contacts.html
+++ b/contacts.html
@@ -294,8 +294,8 @@
 								<div class="desc">
 									<h5 class="name">Email Address</h5>
 									<ul>
-										<li>supportQuốc Lâm@gmail.com <br>www.Quốc Lâminfo.net</li>
-										<li>supportQuốc Lâm@gmail.com <br>www.Quốc Lâminfo.net</li>
+										<li>supportNPT@gmail.com <br>www.NPTinfo.net</li>
+										<li>supportNPT@gmail.com <br>www.NPTinfo.net</li>
 									</ul>
 								</div>
 							</div>
@@ -648,7 +648,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -699,7 +699,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
