--- a/faq.html
+++ b/faq.html
@@ -280,7 +280,7 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<div class="kf-faq-item collapse-item element-anim-1 scroll-animate" data-animate="active">
 								<div class="name collapse-btn">
-									How Much Customer Do You Like Quốc Lâm?
+									How Much Customer Do You Like NPT?
 									<i class="las la-arrow-circle-right"></i>
 								</div>
 								<div class="text collapse-content" style="display: none;">
@@ -605,7 +605,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -656,7 +656,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
