--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 								<div class="container">
 									<div class="description align-left element-anim-1">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
 											The London <br>Coffee House
@@ -290,7 +290,7 @@
 								<div class="container">
 									<div class="description align-left element-anim-1">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
 											The Paris<br>Coffee House
@@ -318,7 +318,7 @@
 								<div class="container">
 									<div class="description align-left">
 										<div class="subtitles">
-											Welcome to the Quốc Lâm
+											Welcome to the NPT
 										</div>
 										<h2 class="name text-anim-1" data-splitting="chars">
 											Great Coffee <br>Good Vibes
@@ -448,7 +448,7 @@
 							Choose Best Coffee
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Popular Coffee Menu
+							NPT Popular Coffee Menu
 						</h3>
 					</div>
 
@@ -1120,7 +1120,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -1171,7 +1171,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
