--- a/menu-coffee.html
+++ b/menu-coffee.html
@@ -271,7 +271,7 @@
 							Choose Best of
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Coffee Menu
+							NPT Coffee Menu
 						</h3>
 					</div>
 
@@ -590,7 +590,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -641,7 +641,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
