--- a/services.html
+++ b/services.html
@@ -272,7 +272,7 @@
 							We provide
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Services One
+							NPT Services One
 						</h3>
 					</div>
 
@@ -328,7 +328,7 @@
 							What we do
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Services Two
+							NPT Services Two
 						</h3>
 					</div>
 
@@ -428,7 +428,7 @@
 							Our awesome
 						</div>
 						<h3 class="kf-title element-anim-1 scroll-animate" data-animate="active">
-							Quốc Lâm Services Three
+							NPT Services Three
 						</h3>
 					</div>
 
@@ -567,7 +567,7 @@
 								<li>
 									<i class="las la-envelope-open-text"></i>
 									<em>Email Address :</em>
-									Quốc Lâmdev@gmail.com
+									NPTdev@gmail.com
 								</li>
 								<li>
 									<i class="las la-phone"></i>
@@ -618,7 +618,7 @@
 
 						<!-- copyright -->
 						<div class="kf-copyright element-anim-1 scroll-animate" data-animate="active">
-							Copyright © 2022 Quốc Lâm. All Rights Reserved.
+							Copyright © 2022 NPT. All Rights Reserved.
 						</div>
 
 					</div>
